Updated UserProfileSerivce diagnostic tool

--- a/test/UserProfileService/src/ConsoleUPS/App.config
+++ b/test/UserProfileService/src/ConsoleUPS/App.config
@@ -21,18 +21,25 @@
                 serializeAs="String">
                 <value>http://sharepoint2010.dev.telligent.com/_vti_bin/UserProfileService.asmx</value>
             </setting>
+            <setting name="ConsoleUPS_UserProfileChangeService_UserProfileChangeService"
+                serializeAs="String">
+                <value>http://sharepoint2010.dev.telligent.com/_vti_bin/UserProfileChangeService.asmx</value>
+            </setting>
         </ConsoleUPS.Properties.Settings>
     </applicationSettings>
     <userSettings>
         <ConsoleUPS.Properties.Settings>
             <setting name="UserName" serializeAs="String">
-                <value>user</value>
+                <value>username</value>
             </setting>
             <setting name="Password" serializeAs="String">
                 <value>password</value>
             </setting>
             <setting name="Domain" serializeAs="String">
                 <value>domain</value>
+            </setting>
+            <setting name="ChangeToken" serializeAs="String">
+                <value />
             </setting>
         </ConsoleUPS.Properties.Settings>
     </userSettings>
