--- a/src/Telligent.Evolution.Extensions.SharePoint.WebServices/app.config
+++ b/src/Telligent.Evolution.Extensions.SharePoint.WebServices/app.config
@@ -1,36 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Telligent.Evolution.Extensions.SharePoint.WebServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Telligent.Evolution.Extensions.SharePoint.WebServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <applicationSettings>
         <Telligent.Evolution.Extensions.SharePoint.WebServices.Properties.Settings>
-            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_TaxonomyClientService_Taxonomy_x0020_web_x0020_service"
-                serializeAs="String">
+            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_TaxonomyClientService_Taxonomy_x0020_web_x0020_service" serializeAs="String">
                 <value>https://telligentsharepoint.sharepoint.com/_vti_bin/TaxonomyClientService.asmx</value>
             </setting>
-            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_UserProfileChangeService_UserProfileChangeService"
-                serializeAs="String">
+            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_UserProfileChangeService_UserProfileChangeService" serializeAs="String">
                 <value>https://telligentsharepoint.sharepoint.com/_vti_bin/UserProfileChangeService.asmx</value>
             </setting>
-            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_UserProfileService_UserProfileService"
-                serializeAs="String">
+            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_UserProfileService_UserProfileService" serializeAs="String">
                 <value>https://telligentsharepoint.sharepoint.com/_vti_bin/UserProfileService.asmx</value>
             </setting>
-            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_VersionsService_Versions"
-                serializeAs="String">
+            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_VersionsService_Versions" serializeAs="String">
                 <value>https://telligentsharepoint.sharepoint.com/_vti_bin/Versions.asmx</value>
             </setting>
-            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_SPListsService_Lists"
-                serializeAs="String">
+            <setting name="Telligent_Evolution_Extensions_SharePoint_WebServices_SPListsService_Lists" serializeAs="String">
                 <value>https://telligentsharepoint.sharepoint.com/_vti_bin/lists.asmx</value>
             </setting>
         </Telligent.Evolution.Extensions.SharePoint.WebServices.Properties.Settings>
     </applicationSettings>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings/>
+        <client/>
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
